<resources>
    <string name="app_name">Supletorio App Moviles</string>
    <string name="correo">Correo</string>
    <string name="password">Password</string>
    <string name="botonRegistrar">Registrarse</string>
    <string name="botonLogin">Login</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="fechaNacimiento">Fecha de Nacimiento</string>
    <string name="PadreComida">Registrar Comida</string>
    <string name="ListarTablaPadre">Listar Comida</string>
    <string name="jugar">Jugar</string>
    <string name="nombrePlato">Nombre Plato</string>
    <string name="descripcionPlato">Descripción Plato</string>
    <string name="nacionalidadPlato">Nacionalidad</string>
    <string name="numeroPersonasPlato">Número Personas</string>
    <string name="picante">Picante</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="nuevoBoton">Nuevo</string>
    <string name="nombreIngrediente">Nombre Ingrediente</string>
    <string name="cantidad">Cantidad</string>
    <string name="descripcionPreparacion">Descripción Preparación</string>
    <string name="opcional">Opcional</string>
    <string name="tipoIngrediente">Tipo Ingrediente</string>
    <string name="necesitaRefrigeracion">Necesita Refrigeración</string>
    <string name="id">ID</string>
    <string name="tomarFoto">Tomar Fotografia</string>
    <string name="idPadre">Id Padre</string>
    <string name="btnregistrarIngrediente">Registrar Ingrediente</string>
    <string name="btnVerIngredientes">Ver Ingredientes</string>
    <string name="btnRecolectarBatalla">Recolectar o Batalla</string>
    <string name="btnInfBatalla">Información Batalla</string>
    <string name="btnPerfil">Perfil</string>
    <string name="btnBuscar">Buscar</string>
    <string name="buscarPorAtributo">Buscar por Atributo</string>
    <string name="btnAñadir">Añadir</string>
</resources>
