<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuJuegoActivity" android:background="@color/colorPrimaryDark">


    <Button
            android:text="@string/btnregistrarIngrediente"
            android:layout_width="255dp"
            android:layout_height="64dp"
            android:id="@+id/btn_registrarIngredientes"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="64dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503" style="@android:style/Widget.Button.Inset"
            android:fontFamily="casual"/>
    <Button
            android:text="@string/btnVerIngredientes"
            android:layout_width="253dp"
            android:layout_height="63dp"
            android:id="@+id/btn_ver_app"
            app:layout_constraintStart_toStartOf="@+id/btn_registrarIngredientes" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_registrarIngredientes"
            style="@android:style/Widget.Button.Inset" android:fontFamily="casual"/>
    <Button
            android:text="@string/btnRecolectarBatalla"
            android:layout_width="254dp"
            android:layout_height="62dp"
            android:id="@+id/btn_batalla"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_ver_app" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507" style="@android:style/Widget.Button.Inset"
            android:fontFamily="casual"/>
    <Button
            android:text="@string/btnInfBatalla"
            android:layout_width="257dp"
            android:layout_height="57dp"
            android:id="@+id/btn_info_batalla"
            app:layout_constraintStart_toStartOf="@+id/btn_batalla"
            app:layout_constraintTop_toBottomOf="@+id/btn_batalla" android:layout_marginTop="20dp"
            style="@android:style/Widget.Button.Inset" android:fontFamily="casual"/>
    <Button
            android:text="@string/btnPerfil"
            android:layout_width="254dp"
            android:layout_height="61dp"
            android:id="@+id/btn_perfil"
            tools:ignore="MissingConstraints"
            app:layout_constraintStart_toStartOf="@+id/btn_info_batalla" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_info_batalla" style="@android:style/Widget.Button.Inset"
            android:fontFamily="casual"/>


</android.support.constraint.ConstraintLayout>