<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lista_ingredientesLista"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/colorPrimaryDark"
    android:baselineAligned="false"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="5dp"
    tools:layout_editor_absoluteY="86dp">

    <TextView
        android:id="@+id/hijoCantidad"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="13dp"
        android:text="@string/cantidad"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/hijoDescripcionPreparacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hijoNombreIngrediente"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/hijoDescripcionPreparacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="13dp"
        android:text="@string/descripcionPreparacion"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/hijoOpcional"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hijoCantidad"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/hijoOpcional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opcional"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="89dp" />

    <TextView
        android:id="@+id/hijoNombreIngrediente"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="13dp"
        android:text="@string/nombreIngrediente"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/hijoCantidad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/hijoNecesitaRefrigeracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/necesitaRefrigeracion"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hijoTipoIngrediente"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/hijoTipoIngrediente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="14dp"
        android:text="@string/tipoIngrediente"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/hijoNecesitaRefrigeracion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hijoOpcional"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>