<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ListaIngredientesActivity">

    <Button
            android:id="@+id/btn_nuevo_ingredientes"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:text="@string/nuevoBoton"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            style="@android:style/Widget.Button.Inset" android:fontFamily="casual"/>

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="342dp"
            android:layout_height="198dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

        <TextView
                android:text="@string/id"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content" android:id="@+id/idComidaRecivido"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"/>
        <TextView
                android:id="@+id/hijonombrePlato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/nombrePlato"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" android:fontFamily="casual"/>

        <TextView
                android:id="@+id/hijoDescripcionPlato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/descripcionPlato"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" android:fontFamily="casual"/>

        <TextView
                android:id="@+id/hijoNacionalidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/nacionalidadPlato"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" android:fontFamily="casual"/>

        <TextView
                android:id="@+id/hijoNumPersonas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/numeroPersonasPlato"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" android:fontFamily="casual"/>

        <TextView
                android:id="@+id/hijoPicante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/picante"
                android:textColor="@color/common_google_signin_btn_text_dark_focused" android:fontFamily="casual"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/lista_ap"
            android:layout_width="match_parent"
            android:layout_height="653dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_nuevo_ingredientes"
            tools:context=".ListaAPPActivity"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="30dp" android:layout_marginTop="8dp">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/reciclerListaIngredientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>