<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lista_comida"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/colorPrimaryDark"
    android:baselineAligned="false"
    android:clickable="true"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="5dp"
    tools:layout_editor_absoluteY="86dp">

    <TextView
            android:id="@+id/nombre_platoLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombrePlato"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="14sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="8dp" android:fontFamily="casual"/>

    <TextView
            android:id="@+id/descripconPlatoLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/descripcionPlato"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/nombre_platoLista"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" android:fontFamily="casual"/>

    <TextView
            android:id="@+id/nacionalidadPlatoLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nacionalidadPlato"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/descripconPlatoLista"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" android:fontFamily="casual"/>

    <TextView
            android:id="@+id/numeroPlatoLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/numeroPersonasPlato"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/nacionalidadPlatoLista"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" android:fontFamily="casual"/>

    <TextView
            android:id="@+id/picantePlatoLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/picante"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numeroPlatoLista"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" android:fontFamily="casual"/>
</android.support.constraint.ConstraintLayout>