<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/ingredientesListaLista"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:layout_margin="5dp"
                                             android:background="@color/colorPrimaryDark"
                                             android:baselineAligned="false"
                                             android:clickable="true"
                                             android:foreground="?attr/selectableItemBackground"
                                             android:orientation="vertical"
                                             tools:layout_editor_absoluteX="5dp"
                                             tools:layout_editor_absoluteY="86dp">

    <TextView
            android:id="@+id/hijoNombreIngrediente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombreIngrediente"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="14sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="8dp" android:fontFamily="casual"/>

    <TextView
            android:id="@+id/hijoCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cantidad"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/hijoNombreIngrediente"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" android:fontFamily="casual"/>

    <TextView
            android:id="@+id/hijoDescripcionPreparacion"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="@string/descripcionPreparacion"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/hijoCantidad"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" android:fontFamily="casual"/>

    <TextView
            android:id="@+id/hijoNecesitaRefrigeracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/necesitaRefrigeracion"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/hijoDescripcionPreparacion"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" android:fontFamily="casual"/>

</android.support.constraint.ConstraintLayout>